--- a/recourses/css/contact_form.css
+++ b/recourses/css/contact_form.css
@@ -1,14 +1,14 @@
 *{
 	margin: 0;
+	font-family: "Lucida Console", "Courier New", monospace;
 }
 textarea{
 	resize: none;
 }
 #contact_form{
 	background-image: linear-gradient(to top right, brown, black);
-	position: absolute;
-	right: 13%;
-	top: 8%;
+	margin-left: 50%;
+	margin-top: 3%;
 	width: 33%;
 	height: 80%;
 	border-radius: 10px;
@@ -68,4 +68,23 @@ textarea{
 	margin-left: 11.5%;
 	margin-top: 9%;
 	font-size: 22px;
+}
+
+/* MEDIA QUIERIES */
+
+@media screen and (max-width: 1000px){
+	#contact_form{
+		width: 80%;
+		margin: 10%;
+	}
+	#form_name, #form_text, #form_addr{
+		font-size: 200%;
+		border-bottom: white 5px solid;
+		color: white;
+	}
+	#form_send{
+		font-size: 400%;
+	}#form_send:hover{
+		font-size: 410%;
+	}
 }
