--- a/recourses/css/main_style.css
+++ b/recourses/css/main_style.css
@@ -12,11 +12,11 @@ a{
 }
 #presenter{
 	/*background-color: purple;*/
-	color: white;
+	color: black;
 	font-size: 40px;
 	line-height: 50px;
 	width: 49%;
-	text-shadow: 5px 5px 8px white;
+	text-shadow: 5px 5px 8px black;
 	float: right;
 	padding-top: 1%;
 }
@@ -37,7 +37,8 @@ a{
 
 /*#presenter,#participe-button{opacity:0.5;}*/
 #participe-button button{
-	background-image: linear-gradient(to top right, brown, black);
+	/*background-image: linear-gradient(to top right, brown, black);*/
+	background: white;
 	border: 0;
 	border-radius: 5px;
 	margin-top: 70%;
@@ -46,10 +47,11 @@ a{
 	height: 50px;
 	font-size: 20px;
 	box-shadow: 15px 15px 8px black;
+	border: 1px solid black;
 }
 #participe-button a{
 	text-decoration: none;
-	color: white;
+	color: black;
 }
 #hamburger{
 	position: absolute;
@@ -63,7 +65,7 @@ a{
 #bar1, #bar2, #bar3{
 	width: 100%;
 	height: 23%;
-	background-color: white;
+	background-color: black;
 	top: 0;
 	left: 0;
 }
@@ -83,7 +85,8 @@ a{
 	width: 25%;
 	height: 98%;
 	margin-top: 0.4%;
-	background-image: linear-gradient(to top right, brown, black);
+	/*background-image: linear-gradient(to top right, brown, black);*/
+	background-color: white;
 	border-radius: 20px;
 	box-shadow: 10px 10px 8px black;
 	left: -75%;
@@ -104,10 +107,10 @@ a{
 	width: 100%;
 	padding-top: 15px;
 	padding-bottom: 15px;
-	background-image: linear-gradient(to right bottom, white, brown);
+	background-color: black;
 	text-align: center;
 	font-size: 18px;
-	color: black;
+	color: white;
 }.option:hover{
 	font-size: 20px;
 }
