--- a/recourses/css/contact_form.css
+++ b/recourses/css/contact_form.css
@@ -26,6 +26,7 @@ textarea{
 	padding: 4.5px;
 	color: white;
 	font-size: 13px;
+	border-bottom: 2px white solid;
 }
 #form_name:hover, #form_text:hover, #form_addr:hover{
 	/*background-color: black;*/
